X-axis mirror do not scale corresponding bone with single bbone scale #63841

Closed
opened 2019-04-23 23:00:12 +02:00 by Piotr Arłukowicz · 5 comments

System Information
Operating system: Linux-4.15.0-47-generic-x86_64-with-LinuxMint-19-tara 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 12:31, hash: 5a144c797a
Worked: (optional)

Short description of error
B-Bone in symmetric rig do not scale together when X-Axis mirror is enabled.

Exact steps for others to reproduce the error

  1. Open the file with Blender 2.8
  2. Press Ctrl+Alt+S and scale selected bone.
  3. The second bone is not scaled, however, ArmatureOptions->X-Axis mirror is enabled.

Expected behaviour is to have both bones scaled.szkielet-rig2.blend

**System Information** Operating system: Linux-4.15.0-47-generic-x86_64-with-LinuxMint-19-tara 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 12:31, hash: `5a144c797a` Worked: (optional) **Short description of error** B-Bone in symmetric rig do not scale together when X-Axis mirror is enabled. **Exact steps for others to reproduce the error** 1. Open the file with Blender 2.8 2. Press Ctrl+Alt+S and scale selected bone. 3. The second bone is not scaled, however, ArmatureOptions->X-Axis mirror is enabled. Expected behaviour is to have both bones scaled.[szkielet-rig2.blend](https://archive.blender.org/developer/F6970455/szkielet-rig2.blend)
Author
Member

Added subscriber: @piotao

Added subscriber: @piotao
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Philipp Oeser self-assigned this 2019-04-24 15:36:45 +02:00

This issue was referenced by 5d9d32fd1f

This issue was referenced by 5d9d32fd1fa3aef6aa207246184aa2c617478faf
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63841
No description provided.