Fix T63841: armature with X-axis mirror does not mirror bbone scale

Reviewers: brecht

Maniphest Tasks: T63841

Differential Revision: https://developer.blender.org/D4733